# neural-network-project

./: .gitmodules  CMakeLists.txt  HLREADME.md  README.md
augment-images/: CMakeLists.txt  README.md  main.cpp
augment-images/lib/include/: AugmentImages.h  ImageProcessor.h
augment-images/lib/src/: AugmentImages.cpp  ImageProcessor.cpp
create-model/: Final Project.ipynb  README.md  create-model.ipynb
frugally-deep-imp/: CMakeLists.txt  README.md  deep_model.json  main.cpp
frugally-deep-imp/lib/include/: Model.h
frugally-deep-imp/lib/src/: Model.cpp
